# MetaClaw

./: README.md  README_ZH.md  pyproject.toml
assets/: README_AR.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_VI.md  README_ZH.md
metaclaw/: sdk_backend.py  setup_wizard.py
tests/: test_sdk_backend.py  test_setup_wizard.py
