[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaclaw"
version = "0.3.0"
description = "OpenClaw skill injection and RL training — one-click deployment"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "tiktoken",
]

[project.optional-dependencies]
# Full RL training (requires Tinker cloud access)
rl = [
    "torch",
    "transformers>=4.51.1",
    "tinker",
]
# Full RL training via MinT compatibility layer.
mint = [
    "torch",
    "transformers>=4.51.1",
    "mindlab-toolkit @ git+https://github.com/MindLab-Research/mindlab-toolkit.git@e75a8720a97f4de0335617a4968f7b489758ae8a",
]
# Embedding-based skill retrieval
embedding = [
    "numpy",
    "sentence-transformers",
]
# Skill evolution via LLM
evolve = [
    "openai",
]
# W&B training metrics
wandb = [
    "wandb",
]
# Idle-window scheduler + Google Calendar integration
scheduler = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2",
]
# Everything
all = [
    "metaclaw[rl,embedding,evolve,wandb,scheduler]",
]

[project.scripts]
metaclaw = "metaclaw.cli:metaclaw"

[tool.setuptools.packages.find]
where = ["."]
include = ["metaclaw*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731", "F403", "F405"]
